# GL-Base-Camp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  YV.sln  YV.vcxproj  makefile
Client/: main.cpp  processInfo.cpp  processInfo.h  processInfoImpl.cpp  processInfoImpl.h
Client/Client/: Client.vcxproj
Common/: communication.cpp  communication.h  processInfoCommon.cpp  processInfoCommon.h
Server/: main.cpp
Server/Server/: Server.vcxproj
Sleep/sleep/: sleep.cpp  sleep.vcxproj
Task1/: README.md  YV.sln
Task1/Client/: processInfoImpl.cpp  processInfoImpl.h
Task1/Client/Client/: Client.vcxproj
Task1/Common/: processInfoCommon.h
Task1/Server/: main.cpp
Task2/: CMakeLists.txt  README.md  main.cpp
Task2/model/: ProcessInfo.cpp  ProcessInfo.h  SystemInfo.cpp  SystemInfo.h  processInfo.cpp  processInfo.h  systemInfo.cpp  systemInfo.h
Task2/model/LinuxImpl/: ProcessInfoImplLinux.cpp  ProcessInfoImplLinux.h  SystemInfoImplLinux.cpp  SystemInfoImplLinux.h  processInfoImplLinux.cpp  processInfoImplLinux.h  systemInfoImplLinux.cpp
Task2/model/WindowsImp/: SystemInfoImplWindows.cpp
Task2/model_view/: Client.cpp  Client.h  Runnable.cpp  Runnable.h  UI.cpp  UI.h  UserInterface.cpp  UserInterface.h  client.cpp  client.h  runable.cpp  runable.h  runnable.cpp  runnable.h  uiObjects.cpp  uiObjects.h
Task3/: CMakeLists.txt  Common.h  RawUdpReceiver.cpp  RawUdpReceiver.h  RawUdpSender.cpp  RawUdpSender.h  SynchronousStreamer.cpp  SynchronousStreamer.h  client.cpp  server.cpp
Tests/: testProcessInfo.cpp
